Burger Api, Service, Repository, Handler. Get and save point.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: always
     container_name: ${POSTGRES_CONTAINER_NAME}
+    ports:
+      - 5432:5432
     shm_size: 128mb
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
